--- a/app/walkandplay/trunk/client/phone/build.xml
+++ b/app/walkandplay/trunk/client/phone/build.xml
@@ -267,11 +267,12 @@
                     <attribute name="MIDlet-Permissions" value="javax.microedition.io.Connector.http"/>
 					<attribute name="MIDlet-Permissions-Opt" value="javax.microedition.io.Connector.bluetooth.client,javax.microedition.media.control.VideoControl.getSnapshot" />
 					<attribute name="kw-url" value="http://test.mlgk.nl/wp" />					
+					<attribute name="kw-server" value="test.mlgk.nl" />					
 					<attribute name="kw-timeout" value="20" />
 					<attribute name="kw-user" value="yellow2" />
 					<attribute name="kw-password" value="user" />
 					<attribute name="kw-amulet" value="mlgkamulet" />
-					<attribute name="kw-port" value="6000" />
+					<attribute name="kw-port" value="6050" />
 					<attribute name="kw-app" value="geoapp" />
 					<attribute name="kw-role" value="user" />
 					<attribute name="audio-rate" value="8000" />
