--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -17,7 +17,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<property name="build.properties" value="../build.test.properties"/>
 	<property file="build.properties"/>
 
-	<property name="runtime.properties" value="runtime.live.properties"/>
+	<property name="runtime.properties" value="runtime.local.properties"/>
 	<property file="${runtime.properties}"/>
 
 	<property name="security.properties" value="security.properties"/>
