mlgk: make working version for server/client

--- a/app/mlgk/trunk/build.properties
+++ b/app/mlgk/trunk/build.properties
@@ -1,14 +1,14 @@
 # $Id: build.properties 173 2006-11-17 11:40:32Z just $
 
 # global project props
-project.name=WalkAndPlay
-project.id=walkandplay
+project.name=MLGL
+project.id=mlgk
 version=1.0.0
 
 # specify the directory for your (tomcat) webapps
-deploy.local.dir=/var/keyworx/webapps/walkandplay
-deploy.test.dir=/var/keyworx/webapps/walkandplay
-deploy.test.server=keyworx@test.walkandplay.com
+deploy.local.dir=/var/keyworx/webapps/mlgk
+deploy.test.dir=/var/keyworx/webapps/mlgk
+deploy.test.server=keyworx@test.mlgk.nl
 
 
 
