--- a/app/mlgk/trunk/server/build.properties
+++ b/app/mlgk/trunk/server/build.properties
@@ -1,8 +1,8 @@
 # $Id: build.properties,v 1.3 2006-06-03 23:17:26 just Exp $
 
 # project props
-project.name=WP
-project.id=wp
+project.name=MLGK
+project.id=mlgk
 version=1.0.0
 
 # your PATH must point to the bin where the Jikes compiler is
@@ -11,7 +11,7 @@ javac.debug=true
 javac.deprecation=false
 javac.optimize=true
 
-war.name=wp
+war.name=mlgk
 
 # specify the directory of the GeoTracing unpacked .war archive
 gt.war.dir=${basedir}/../../../../base/trunk/server/build/war
