--- a/app/mlgk/trunk/client/phone/build.properties
+++ b/app/mlgk/trunk/client/phone/build.properties
@@ -5,7 +5,7 @@
 project.name=wp
 
 # Standard MIDlet properties to be substituted in MANIFEST.MF and .jad.template
-midlet.name=WP
+midlet.name=MLGK
 midlet.class=org.walkandplay.client.phone.WP
 midlet.icon=/app.png
 midlet.version=1.0.2
