--- a/app/mlgk/trunk/client/phone/build.xml
+++ b/app/mlgk/trunk/client/phone/build.xml
@@ -269,10 +269,10 @@
 				<jad>
                     <attribute name="MIDlet-Permissions" value="javax.microedition.io.Connector.http"/>
 					<attribute name="MIDlet-Permissions-Opt" value="javax.microedition.io.Connector.bluetooth.client,javax.microedition.media.control.VideoControl.getSnapshot" />
-					<attribute name="kw-url" value="http://test.${project.name}.com/wp" />
-					<attribute name="kw-server" value="test.${project.name}.com" />
+					<attribute name="kw-url" value="http://test.${project.name}.nl/wp" />
+					<attribute name="kw-server" value="test.${project.name}.nl" />
 					<attribute name="kw-timeout" value="20" />
-					<attribute name="kw-user" value="yellow2" />
+					<attribute name="kw-user" value="red2" />
 					<attribute name="kw-password" value="user" />
 					<attribute name="kw-port" value="6050" />
 					<attribute name="kw-app" value="geoapp" />
