--- a/app/mlgk/trunk/client/phone/etc/wp.properties
+++ b/app/mlgk/trunk/client/phone/etc/wp.properties
@@ -1,5 +1,5 @@
-pundit.url=www.walkandplay.com/wp
-sumatra.url=test.walkandplay.com/wp
+pundit.url=www.mlgk.nl/wp
+sumatra.url=test.mlgk.nl/wp
 wp.options=full
 gps.sample.interval=3000
 gps.send.interval=5000
