wnp: automate GameBots using TesterDaemon

--- a/app/walkandplay/trunk/server/test/bot/cfg/gamebot-red.properties
+++ b/app/walkandplay/trunk/server/test/bot/cfg/gamebot-red.properties
@@ -3,10 +3,11 @@
 host=127.0.0.1
 port=6050
 script.dir=../script
+media.dir=../media/red
 result.dir=/var/keyworx/webapps/walkandplay/wptest/test/protocol
 suite=../script/suite-red.xml
 repeat=false
-senddelay=8000
+senddelay=4000
 
 
 
