--- a/app/walkandplay/trunk/server/test/bot/cfg/gamebot-blue.properties
+++ b/app/walkandplay/trunk/server/test/bot/cfg/gamebot-blue.properties
@@ -3,10 +3,11 @@
 host=127.0.0.1
 port=6050
 script.dir=../script
+media.dir=../media/blue
 result.dir=/var/keyworx/webapps/walkandplay/wptest/test/protocol
-suite=../script/suite.xml
+suite=../script/suite-blue.xml
 repeat=false
-senddelay=8000
+senddelay=5000
 
 
 
