wnp: fixes phone app

--- a/app/walkandplay/trunk/client/phone/build.properties
+++ b/app/walkandplay/trunk/client/phone/build.properties
@@ -8,9 +8,9 @@ project.name=wp
 midlet.name=WP
 midlet.class=org.walkandplay.client.phone.WP
 midlet.icon=/app.png
-midlet.version=1.0.5
-midlet.vendor=Waag Society
-midlet.info.url=http://www.waag.org
+midlet.version=1.0.8
+midlet.vendor=7Scenes
+midlet.info.url=http://www.7scenes.com
 midlet.cldc=CLDC-1.0
 midlet.midp=MIDP-2.0
 midlet.permissions=javax.microedition.io.Connector.http
