wnp: fixes and move of DNS for test.walkandplay.com

--- a/app/walkandplay/trunk/build.properties
+++ b/app/walkandplay/trunk/build.properties
@@ -9,6 +9,7 @@ version=1.0.0
 deploy.local.dir=/var/keyworx/webapps/walkandplay
 deploy.test.dir=/var/keyworx/webapps/walkandplay
 deploy.test.server=keyworx@test.walkandplay.com
+deploy.prod.server=keyworx@walkandplay.com
 
 
 
