wnp: make green working

--- a/app/walkandplay/trunk/server/test/cfg/test.properties
+++ b/app/walkandplay/trunk/server/test/cfg/test.properties
@@ -1,10 +1,12 @@
 # standard properties file
-# host=test.waag.org
+# host=walkandplay.com
 host=127.0.0.1
 port=6050
 script.dir=../protocol
+# script.dir=../bot/script
 result.dir=/var/keyworx/webapps/walkandplay/wptest/test/protocol
 suite=../protocol/suite.xml
+# suite=../bot/script/suite-green.xml
 repeat=false
 # senddelay=5000
 
