wnp: new external CameraLib, moved properties

--- a/app/walkandplay/trunk/client/phone/build.properties
+++ b/app/walkandplay/trunk/client/phone/build.properties
@@ -15,3 +15,29 @@ midlet.cldc=CLDC-1.0
 midlet.midp=MIDP-2.0
 midlet.permissions=javax.microedition.io.Connector.http
 midlet.permissions.opt=javax.microedition.io.Connector.bluetooth.client,javax.microedition.media.control.VideoControl.getSnapshot
+
+kw-url=http://test.walkandplay.com/wp
+geodan-wms-url=http://walkandplay.com/map/
+google-wms-url=http://test.walkandplay.com/wp/map.srv
+kw-server=test.walkandplay.com" />
+kw-timeout=20
+kw-user=yellow2
+kw-password=user
+kw-port=6050
+kw-app=geoapp
+kw-role=user
+volume=70
+demo=true
+external-player=false
+audio-rate=8000
+audio-bits=8
+gps-sample-interval=3000
+gps-send-interval=5000
+gps-min-sats=4
+gps-min-hdop=2
+device-screen-width=240
+device-screen-height=320
+MPP-Show-Keypad=true
+MPP-Width=240
+MPP-Height=320
+mt-options=full
