wnp: new external CameraLib, moved properties

--- a/app/walkandplay/trunk/client/phone/build.properties
+++ b/app/walkandplay/trunk/client/phone/build.properties
@@ -19,7 +19,7 @@ midlet.permissions.opt=javax.microedition.io.Connector.bluetooth.client,javax.mi
 kw-url=http://test.walkandplay.com/wp
 geodan-wms-url=http://walkandplay.com/map/
 google-wms-url=http://test.walkandplay.com/wp/map.srv
-kw-server=test.walkandplay.com" />
+kw-server=test.walkandplay.com
 kw-timeout=20
 kw-user=yellow2
 kw-password=user
